Fix overflow behaviour

--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -4,13 +4,8 @@ section {
   display: flex;
   justify-content: center;
 
-  width: calc(100vw - 400px);
-
   .container {
-    width: calc(100vw - 300px);
 
-    margin-top: 60px;
-    margin-bottom: 60px;
     margin-left: calc(1vw * calc(200 / 1920 * 100));
 
     display: flex;
