--- a/src/base.scss
+++ b/src/base.scss
@@ -20,10 +20,13 @@ body {
     justify-content: center;
 
     width: calc(100vw - 200px);
-    height: 100%;
+    height: calc(100vh - 60px);
+
+    overflow-y: scroll;
 
     .container {
       width: calc(100vw - 300px);
+      height: fit-content;
 
       margin-top: 60px;
       margin-bottom: 60px;
